--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,32 +1,40 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.events {
+  flex: 3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eventList {
+  list-style-type: none;
+}
+
+.eventListItem img {
+  height: 50px;
+  width: auto;
+}
+
+.eventDesc {
+}
+
+.eventSum {
+}
+
+.eventDetail {
+}
+
+.label {
+  font-weight: bold;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.detail {
+  display: inline-block;
+}
+
+.map {
+  flex: 2;
+  background-color: #eee;
 }
